@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# Copyright (C)2007 'ingeniweb'
+# Copyright (C)2007 'Ingeniweb'
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
